# hexacopter_class

./: CMakeLists.txt  README.md  package.xml
conf/: gridWPs_Perignano.waypoints  gridWPs_Perignano.waypoints~
include/: hexacopter.h
launch/: first_challenge_ctrl.launch  mbzirc_3rd_challenge.launch  mbzirc_8path.launch  mbzirc_8path_notrack.launch  third_challenge_ctrl.launch
models/circle_obj/: model.config  model.sdf
models/cricket_ground/: model.config  model.sdf
models/cricket_ground/materials/scripts/: cricket_ground.material
models/cricket_ground/materials/textures/: seamless_sand_texture_source.txt
models/mbzirc/: model.config  model.sdf
models/mbzirc/meshes/: circuit.stl  track.stl  track_gray.stl
models/rectangle_obj/: model.config  model.sdf
models/square_obj/: model.config  model.sdf
models/target_square/: model.config  model.sdf
models/target_square/materials/scripts/: target_square.material
models/vacuum_gripper/: model.config  model.sdf
plugin_gazebo/: CMakeLists.txt  template_plugin.cc
plugin_gazebo/vacuum_gripper/: CMakeLists.txt  CMakeLists.txt~  vacuum_gripper.cc
src/: hexacopter.cpp  main.cpp
worlds/mbzirc_world/: mbzirc_3rd_challenge.world  mbzirc_8path.world  mbzirc_8path_notrack.world
